        Reviewed by Darin Adler.

- fix http://bugs.webkit.org/show_bug.cgi?id=18307
          <rdar://problem/5842546> REGRESSION (r31620): Incorrect Hiragino Kaku Gothic, font-weight:500

        Test: fast/css/font-weight-1.html

        * platform/graphics/mac/FontCacheMac.mm:
        (WebCore::toAppKitFontWeight): Adjusted the mapping to cover the AppKit
        weight range from 2 to 12, because AppKit weight 1 never occurs. The
        new mapping matches font-weight: n00 to ISO weight Wn.
        * platform/mac/WebFontCache.mm:
        (betterChoice): Changed the midpoint used when deciding between two
        candidates that deviate from the desired weight by the same amount.



Canonical link: https://commits.webkit.org/25385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31850 268f45cc-cd09-0410-ab3c-d52691b4dbfc